added main content placeholders and used css to position them semi-correctly.

--- a/index.html
+++ b/index.html
@@ -27,6 +27,20 @@
             </div>
             <div class=main-content>
                 <h2>Main Content Title</h2>
+                <ul id=content-list>
+                    <li>
+                        <img src="#">
+                        <p>big boy booty</p>
+                    </li>
+                    <li>
+                        <img src="#">
+                        <p>big boy booty</p>
+                    </li>
+                    <li>
+                        <img src="#">
+                        <p>big boy booty</p>
+                    </li>
+                </ul>
             </div>
             <div class=quote-space>
                 <p class=quote>
@@ -36,7 +50,10 @@
                 <p class=quoted-person>-Joe</p>
             </div>
             <div class=sign-up>
-
+                <div class=sign-up-box>
+                    <p>sign up u piece of fuck</p>
+                    <button>Sign up</button>
+                </div>
             </div>
         </main>
         <footer>
