"removed inappropriate placeholder"

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             </div>
             <div class=sign-up>
                 <div class=sign-up-box>
-                    <p>sign up u piece of fuck</p>
+                    <p>sign up please</p>
                     <button>Sign up</button>
                 </div>
             </div>
