added images to index and filled in placeholders

--- a/index.html
+++ b/index.html
@@ -10,54 +10,61 @@
             <p>Kenneth Flynn</p>
             <ul>
                     <li>
-                        dog
+                        <a href="#">Hello</a>
                     </li>
                     <li>
-                        cat
+                        <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Don't click</a>
                     </li>
                     <li>
-                        frog
+                        <a href="https://github.com/flynnkennethd" target="_blank" rel="noopener noreferrer">GitHub</a>
                     </li>
             </ul>
         </header>
         <main>
             <div class=intro>
-                <h1>Flynn's Place to put things right here in this h1</h1>
-                <img src="#">
+                <div>
+                    <h1>Check out my cats.</h1>
+                    <p>There isn't much to this site, 
+                        I'll just be sharing pictures of my two cats.
+                    </p>
+                </div>
+                <img src="/images/two-cats.JPG" alt="Two cats cuddling on chair" id=intro-image>
             </div>
             <div class=main-content>
-                <h2>Main Content Title</h2>
+                <h1>These are all of my cats</h1>
                 <ul id=content-list>
                     <li>
-                        <img src="#">
-                        <p>big boy booty</p>
+                        <img src="/images/juno.JPG" alt="My cat, Juno" class=content-image>
+                        <p>This is my cat, Juno. She is a little bit ugly, but I love her for it.</p>
                     </li>
                     <li>
-                        <img src="#">
-                        <p>big boy booty</p>
+                        <img src="/images/filo.JPG" alt="My cat, Filo" class=content-image>
+                        <p>This is my other cat, Filo. She is great.</p>
                     </li>
                     <li>
-                        <img src="#">
-                        <p>big boy booty</p>
+                        <img src="/images/frog.jpg" alt="Frog" class=content-image>
+                        <p>This isn't a cat at all. It's a cool looking frog I found outside one day.</p>
                     </li>
                 </ul>
             </div>
             <div class=quote-space>
                 <p class=quote>
-                    This is a quote to fill the space of the quote section. 
-                    Please heed the words of wisdom to follow: Don't eat yellow snow,
+                    "Juno is not ugly! You're ugly!"
                 </p>
-                <p class=quoted-person>-Joe</p>
+                <p class=quoted-person>- My Wife, Rachael</p>
             </div>
             <div class=sign-up>
                 <div class=sign-up-box>
-                    <p>sign up please</p>
+                    <div>
+                        <h2>Subscribe to our newsletter!</h2>
+                        <p>If you click this button, we can pretend that you subscribed to a newsletter about my cats.</p>
+                    </div>
                     <button>Sign up</button>
                 </div>
             </div>
         </main>
         <footer>
-            <p>Copyright &copy; The Odin Project 2021</p>
+            <p>Webpage by Kenneth Flynn for The Odin Project &copy;</p>
         </footer>
     </body>
 </html>
