fixed img link issue

--- a/index.html
+++ b/index.html
@@ -28,21 +28,21 @@
                         I'll just be sharing pictures of my two cats.
                     </p>
                 </div>
-                <img src="/images/two-cats.JPG" alt="Two cats cuddling on chair" id=intro-image>
+                <img src="./images/two-cats.JPG" alt="Two cats cuddling on chair" id=intro-image>
             </div>
             <div class=main-content>
                 <h1>These are all of my cats</h1>
                 <ul id=content-list>
                     <li>
-                        <img src="/images/juno.JPG" alt="My cat, Juno" class=content-image>
+                        <img src="./images/juno.JPG" alt="My cat, Juno" class=content-image>
                         <p>This is my cat, Juno. She is a little bit ugly, but I love her for it.</p>
                     </li>
                     <li>
-                        <img src="/images/filo.JPG" alt="My cat, Filo" class=content-image>
+                        <img src="./images/filo.JPG" alt="My cat, Filo" class=content-image>
                         <p>This is my other cat, Filo. She is great.</p>
                     </li>
                     <li>
-                        <img src="/images/frog.jpg" alt="Frog" class=content-image>
+                        <img src="./images/frog.jpg" alt="Frog" class=content-image>
                         <p>This isn't a cat at all. It's a cool looking frog I found outside one day.</p>
                     </li>
                 </ul>
